--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,21 @@
     "node": true
   },
   "extends": [
-    "xo",
-    "xo-typescript"
+    "plugin:@typescript-eslint/recommended",
+    "prettier",
+    "plugin:prettier/recommended"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "plugins": [
+    "react",
+    "@typescript-eslint",
+    "eslint-plugin-import-helpers",
+    "prettier"
+  ],
   "rules": {
     "@typescript-eslint/naming-convention": [
       "error",
