--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "@types/express": "^4.17.17",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^20.2.5",
-    "@typescript-eslint/eslint-plugin": ">=5.57.0",
-    "@typescript-eslint/parser": ">=5.57.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": ">=8.0.0",
-    "eslint-config-xo": "^0.43.1",
-    "eslint-config-xo-typescript": "^0.57.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "typescript": ">=4.4"
   },
