ci(workflows): add code of condute and security, implement readme

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/server.js",
-    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node ./src/server.ts\"",
+    "start": "yarn run build && node dist/server.js",
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node-dev ./src/server.ts\"",
     "lint": "eslint . --fix",
     "commit": "git add . && cz"
   },
