--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "yarn run build && node dist/server.js",
     "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node-dev ./src/server.ts\"",
     "lint": "eslint . --fix",
-    "commit": "git add . && cz"
+    "test": "jest",
+    "commit": "git add . && cz && git push"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
@@ -34,7 +35,8 @@
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
-    "typescript": ">=4.4"
+    "typescript": ">=4.4",
+    "jest": "^29.5.0"
   },
   "config": {
     "commitizen": {
