--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node-dev ./src/server.ts\"",
     "lint": "eslint . --fix",
     "test": "jest",
-    "commit": "git add . && cz && git push"
+    "commit": "yarn lint && git add . && cz && git push"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mongoose": "^7.2.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
@@ -32,11 +36,11 @@
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
-    "typescript": ">=4.4",
-    "jest": "^29.5.0"
+    "typescript": ">=4.4"
   },
   "config": {
     "commitizen": {
