--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "API with mongoDb, express and mongoose for database connection.",
   "main": "src/index.ts",
-  "repository": "https://github.com/GiuseppeDiniz/API-FundControl.git",
+  "repository": "https://github.com/GiuseppeDiniz/API-Nodejs",
   "author": "Giuseppe Diniz P. de Souza",
   "license": "MIT",
   "scripts": {
@@ -14,15 +14,18 @@
     "test": "jest",
     "commit": "yarn lint && git add . && cz && git push"
   },
-  "dependencies": {
+  "dependencies": {    
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "module-alias": "^2.2.2",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
