feat(ensured authorized): commit adds or updates code related to authorization enforcement

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
         "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "typeRoots": [
+          "./src/@types",
+          "node_modules/@types"
+        ] /* List of folders to include type definitions from. */,
     },
     "include": [
         "./src/**/*.ts",
